Fix: Color del menú hamburguesa arreglado a blanco para mejor contraste

--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -269,3 +269,12 @@ p {
         }
     }
 }
+/* Hace que el ícono de las tres rayitas se vuelva blanco brillante */
+.navbar-toggler-icon {
+    filter: invert(1) brightness(200%);
+}
+
+/* Le agrega un borde blanco sutil al recuadro del botón */
+.navbar-toggler {
+    border-color: rgba(255, 255, 255, 0.5);
+}
